better checks fo offline devices

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,5 +58,6 @@ flutter:
     - assets/sigils/
     - assets/relics/
     - assets/skyboxes/
+    - assets/slim.json
     #- assets/maps/
     #- assets/maps/imgs/
