--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_svg: ^0.13.0+2
   simple_animations: ^1.3.0
   get_it: ^1.0.3
+  floating_search_bar: ^0.2.0
 
 dependency_overrides:
   path_provider: ^1.1.0
