--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,10 @@ dependencies:
   hydrated_bloc: ^0.2.1
   codable: ^1.0.0
   equatable: ^0.2.5
-  firebase_lumberdash: ^1.0.1
   flutter_bloc: ^0.18.2
   firebase_crashlytics: ^0.0.4+4
   flutter_custom_tabs: ^0.6.0
-  #flutter_map: ^0.5.3+1
   intl: ^0.15.8
-  lumberdash: ^1.0.3
   package_info: ^0.4.0+4
   shared_preferences: ^0.5.2+2
   sticky_headers: ^0.1.7
@@ -25,6 +22,8 @@ dependencies:
   simple_animations: ^1.3.0
   get_it: ^1.0.3
   floating_search_bar: ^0.2.0
+  catcher: ^0.1.9
+  permission_handler: ^3.1.0
 
 dependency_overrides:
   path_provider: ^1.1.0
