--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,11 @@ dependencies:
   floating_search_bar: ^0.2.0
   catcher: ^0.1.9
   permission_handler: ^3.1.0
+  connectivity_widget: ^0.1.0
 
 dependency_overrides:
   path_provider: ^1.1.0
+  rxdart: ^0.22.0
 
 dev_dependencies:
   flutter_test:
