--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ dependencies:
   flutter:
     sdk: flutter
   bloc: ^0.14.4
-  hydrated_bloc: ^0.2.1
+  hydrated_bloc: ^0.3.0
   codable: ^1.0.0
   equatable: ^0.2.5
   flutter_bloc: ^0.19.0
@@ -18,9 +18,8 @@ dependencies:
   sticky_headers: ^0.1.7
   firebase_messaging: ^5.0.2
   cached_network_image: ^1.0.0
-  flutter_svg: ^0.13.0+2
-  simple_animations: ^1.3.0
-  get_it: ^1.0.3
+  flutter_svg: ^0.13.1
+  simple_animations: ^1.3.3
   floating_search_bar: ^0.2.0
   catcher: ^0.1.9
   permission_handler: ^3.1.0
