--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,16 +13,17 @@ dependencies:
   firebase_crashlytics: ^0.0.4+4
   flutter_custom_tabs: ^0.6.0
   intl: ^0.15.8
-  package_info: ^0.4.0+4
-  shared_preferences: ^0.5.2+2
+  package_info: ^0.4.0+5
+  shared_preferences: ^0.5.3+4
   sticky_headers: ^0.1.7
-  firebase_messaging: ^5.0.2
-  cached_network_image: ^1.0.0
+  firebase_messaging: ^5.1.1
+  cached_network_image: ^1.1.0
   flutter_svg: ^0.13.1
   simple_animations: ^1.3.3
   floating_search_bar: ^0.2.0
   catcher: ^0.1.9
-  permission_handler: ^3.1.0
+  permission_handler: ^3.2.0
+  flutter_brand_icons: ^1.0.0
 
 dependency_overrides:
   path_provider: ^1.1.0
@@ -48,7 +49,6 @@ flutter:
         - asset: assets/general/VoidFissure.ttf        
   assets:
     - assets/general/
-    - assets/platforms/
     - assets/factions/Corrupted/
     - assets/factions/Grineer/
     - assets/factions/Corpus/
