--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,16 @@ matrix:
     - name: 'Flutter test and apk build' 
       language: android
       jdk: oraclejdk8 # Android sdkmanager doesn't support jdk 9+
+      licenses:
+        - android-sdk-preview-license-.+
+        - android-sdk-license-.+
+        - google-gdk-license-.+
       android:
         components:
-          - build-tools-29.0.0
-          - android-29
-          - tools
-          - platform-tools
+          - build-tools-29.0.9
+          - android-29 
+      before_install:
+          - yes | sdkmanager --update    
       before_script:
         - openssl aes-256-cbc -K $encrypted_2db283701f8c_key -iv $encrypted_2db283701f8c_iv 
           -in secrets.tar.enc -out secrets.tar -d
@@ -22,20 +26,24 @@ matrix:
       script:
         - flutter pub get
         - flutter test 
+        - yes | flutter doctor --android-licenses 
         - flutter build apk # we only need to see if an apk builds correctly so the quicker the better
 
     - name: 'Fastlane Deploy'
       language: android
       jdk: oraclejdk8
       env: JOB=fastlane_deploy
+      licenses: 
+        - android-sdk-license-.+
+        - android-sdk-preview-license-.+
+        - google-gdk-license-.+
       android:
         components: 
           - build-tools-29.0.0
           - android-29
-          - tools
-          - platform-tools
       before_install: 
         - bundle install --gemfile=android/Gemfile
+        - yes | sdkmanager --update  
       before_script:
         - openssl aes-256-cbc -K $encrypted_2db283701f8c_key -iv $encrypted_2db283701f8c_iv 
           -in secrets.tar.enc -out secrets.tar -d
@@ -45,6 +53,7 @@ matrix:
         - flutter upgrade 
       script:
         - flutter pub get
+        - yes | flutter doctor --android-licenses 
         - flutter build appbundle # release is the default mode for build
         - cd android && bundle exec fastlane beta               
 
