--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ matrix:
     
   include:
     - name: 'Flutter test and apk build' 
+      dist: trusty
       language: android
       jdk: oraclejdk8 # Android sdkmanager doesn't support jdk 9+
       licenses:
@@ -13,9 +14,7 @@ matrix:
       android:
         components:
           - build-tools-29.0.9
-          - android-29 
-      before_install:
-          - yes | sdkmanager --update    
+          - android-29    
       before_script:
         - openssl aes-256-cbc -K $encrypted_2db283701f8c_key -iv $encrypted_2db283701f8c_iv 
           -in secrets.tar.enc -out secrets.tar -d
@@ -31,6 +30,7 @@ matrix:
 
     - name: 'Fastlane Deploy'
       language: android
+      dist: trusty
       jdk: oraclejdk8
       env: JOB=fastlane_deploy
       licenses: 
@@ -43,7 +43,6 @@ matrix:
           - android-29
       before_install: 
         - bundle install --gemfile=android/Gemfile
-        - yes | sdkmanager --update  
       before_script:
         - openssl aes-256-cbc -K $encrypted_2db283701f8c_key -iv $encrypted_2db283701f8c_iv 
           -in secrets.tar.enc -out secrets.tar -d
