--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,7 +36,7 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 28
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -49,7 +49,7 @@ android {
     defaultConfig {
         applicationId 'com.cephalon.navis'
         minSdkVersion 16
-        targetSdkVersion 29
+        targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName + getDate()
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
@@ -74,6 +74,7 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    buildToolsVersion = '28.0.3'
 }
 
 flutter {
