--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dev_dependencies:
   flutter_driver:
     sdk: flutter
   test: ^1.6.1
-  build_runner: ^1.6.4
+
+builders:
   json_serializable: ^3.1.0
 
 flutter:
