--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,14 +16,16 @@ dependencies:
   shared_preferences: ^0.5.3+4
   sticky_headers: ^0.1.7
   firebase_messaging: ^5.1.2
-  cached_network_image: ^1.1.0
+  cached_network_image: ^1.1.1
   flutter_svg: ^0.13.1
   simple_animations: ^1.3.3
   floating_search_bar: ^0.2.0
   flutter_brand_icons: ^1.0.0
   json_annotation: ^2.4.0
   worldstate_model: 
-    git: https://github.com/SlayerOrnstein/worldstate_model.git
+    git: 
+      url: https://github.com/SlayerOrnstein/worldstate_model.git
+      ref: 3a796bc61bc9dcb48dcdf02e96fe2054698bc63f
   wfcd_api_wrapper:
     git: https://github.com/SlayerOrnstein/wfcd_api_wrapper.git
   firebase_performance: ^0.3.0+4  
