--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: navis
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
-version: 1.2.17+40
+version: 1.2.18+41
 
 dependencies:
   flutter:
@@ -23,9 +23,7 @@ dependencies:
   flutter_brand_icons: ^1.0.0
   json_annotation: ^2.4.0
   worldstate_model: 
-    git: 
-      url: https://github.com/SlayerOrnstein/worldstate_model.git
-      ref: e66bfce2bd973eab1f91888e004c6d28e071051c
+    git: https://github.com/SlayerOrnstein/worldstate_model.git
   wfcd_api_wrapper:
     git: https://github.com/SlayerOrnstein/wfcd_api_wrapper.git
   firebase_performance: ^0.3.0+4  
