--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
   flutter_driver:
     sdk: flutter
   test: ^1.6.1
+  mockito: ^4.1.0
 
 builders:
   json_serializable: ^3.1.0
