--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dev_dependencies:
   mockito: ^4.1.0
 
 builders:
-  json_serializable: ^3.1.0
+  json_serializable: 3.0.0
 
 flutter:
   uses-material-design: true
