--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,6 @@ dependencies:
   flutter_svg: ^0.14.0
   simple_animations: ^1.3.3
   floating_search_bar: ^0.2.0
-  flutter_brand_icons: ^1.0.0
   json_annotation: ^2.4.0
   worldstate_model: 
     git: https://github.com/SlayerOrnstein/worldstate_model.git
@@ -57,6 +56,7 @@ flutter:
     - assets/factions/Grineer/
     - assets/factions/Corpus/
     - assets/factions/Infestation/
+    - assets/platforms/
     - assets/sigils/
     - assets/relics/
     - assets/skyboxes/
