--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,9 +1,9 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\flutter
 FLUTTER_APPLICATION_PATH=C:\Users\darkl\Desktop\navis
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build\ios
 FLUTTER_FRAMEWORK_DIR=C:\flutter\bin\cache\artifacts\engine\ios
-FLUTTER_BUILD_NAME=1.2.16
-FLUTTER_BUILD_NUMBER=39
+FLUTTER_BUILD_NAME=1.2.23
+FLUTTER_BUILD_NUMBER=46
