--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,6 +34,7 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
+    buildToolsVersion = '28.0.3'
     compileSdkVersion 28
 
     sourceSets {
@@ -72,7 +73,14 @@ android {
             signingConfig signingConfigs.release
         }
     }
-    buildToolsVersion = '28.0.3'
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include "armeabi-v7a", "arm64-v8a"
+        }
+    }
 }
 
 flutter {
