--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ android/fastlane/report.xml
 **/*.g.dart
 .packages.generated
 flutter_*.log
+ios/Flutter/flutter_export_environment.sh
+ios/Flutter/Generated.xcconfig
