--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,13 +20,15 @@ dependencies:
   simple_animations: ^1.3.3
   floating_search_bar: ^0.2.0
   json_annotation: ^3.0.0
+  firebase_performance: ^0.3.0+4
+  overlay_support: ^1.0.1
+  flutter_sticky_header: ^0.4.0
   worldstate_model:
     git: https://github.com/SlayerOrnstein/worldstate_model.git
   wfcd_api_wrapper:
     git: https://github.com/SlayerOrnstein/wfcd_api_wrapper.git
-  firebase_performance: ^0.3.0+4
-  overlay_support: ^1.0.1
-  flutter_sticky_header: ^0.4.0
+  warframe_items_model:
+    git: https://github.com/SlayerOrnstein/warframe_item_models.git
 
 dev_dependencies:
   flutter_test:
