--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: navis
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
-version: 1.2.25+48
+version: 1.2.27+50
 
 dependencies:
   flutter:
@@ -19,7 +19,6 @@ dependencies:
   flutter_svg: ^0.14.0
   simple_animations: ^1.3.3
   floating_search_bar: ^0.2.0
-  json_annotation: ^3.0.0
   firebase_performance: ^0.3.0+4
   overlay_support: ^1.0.1
   flutter_sticky_header: ^0.4.0
@@ -29,6 +28,7 @@ dependencies:
     git: https://github.com/SlayerOrnstein/wfcd_api_wrapper.git
   warframe_items_model:
     git: https://github.com/SlayerOrnstein/warframe_item_models.git
+  fluro: ^1.5.1
 
 dev_dependencies:
   flutter_test:
@@ -37,9 +37,6 @@ dev_dependencies:
     sdk: flutter
   test: ^1.6.1
   mockito: ^4.1.0
-
-builders:
-  json_serializable: ^3.2.0
 
 flutter:
   uses-material-design: true
