ignore generated file

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ android/fastlane/report.xml
 flutter_*.log
 ios/Flutter/flutter_export_environment.sh
 ios/Flutter/Generated.xcconfig
+ios/Runner/GeneratedPluginRegistrant.m
