--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,6 +71,11 @@ android {
 
         release {
             signingConfig signingConfigs.release
+
+            minifyEnabled true
+            useProguard true
+
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
