travis: run flutter clean to clean build cache
not sure what it is that causes _Smi is not a subtype of double but
flutter clean seems to solve the prolem. So only run for release builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ jobs:
       if: tag IS present
       script:
         - flutter pub get
+        - flutter clean
         - flutter build apk
         - flutter build appbundle
         - cd android && bundle exec fastlane beta
