--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,6 @@
 org.gradle.jvmargs=-Xmx1536M
-android.enableJetifier=true
+
 android.useAndroidX=true
+android.enableJetifier=true
 extra-gen-snapshot-options=--obfuscate
+android.enableR8=true
