--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,5 +2,5 @@ org.gradle.jvmargs=-Xmx1536M
 
 android.useAndroidX=true
 android.enableJetifier=true
-extra-gen-snapshot-options=--obfuscate
+# extra-gen-snapshot-options=--obfuscate
 android.enableR8=true
