--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dev_dependencies:
     sdk: flutter
   flutter_driver:
     sdk: flutter
-  test: ^1.6.1
+  test: ^1.6.3
+  bloc_test: ^1.0.0
   mockito: ^4.1.1
 
 flutter:
