--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   intl: ^0.16.0
   package_info: ^0.4.0+10
   firebase_messaging: ^5.1.6
-  cached_network_image: ^1.1.3
+  cached_network_image: ^2.0.0-rc.1
   flutter_svg: ^0.14.3
   floating_search_bar: ^0.2.0
   flutter_sticky_header: ^0.4.0
