exclude app from google backup
If google's auto backup were to restore appdata it would break
notifications

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         tools:replace="android:label"
         android:name="io.flutter.app.FlutterApplication"
         android:icon='@mipmap/ic_launcher'
-        android:label="Navis">
+        android:label="Navis"
+        android:allowBackup="false">
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density"
