--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,14 +6,14 @@ dependencies:
   flutter:
     sdk: flutter
   bloc: ^2.0.0
-  equatable: ^0.6.0
-  flutter_bloc: ^2.0.0
-  firebase_crashlytics: ^0.1.0+3
+  equatable: ^1.0.1
+  flutter_bloc: ^2.1.1
+  firebase_crashlytics: ^0.1.2
   flutter_custom_tabs: ^0.6.0
   hydrated_bloc: ^2.0.0
   intl: ^0.15.8
   package_info: ^0.4.0+10
-  firebase_messaging: ^5.1.6
+  firebase_messaging: ^6.0.2
   cached_network_image: ^1.1.3
   flutter_svg: ^0.14.3
   floating_search_bar: ^0.2.0
@@ -33,7 +33,7 @@ dev_dependencies:
   flutter_driver:
     sdk: flutter
   test: ^1.6.3
-  bloc_test: ^2.0.0
+  bloc_test: ^2.2.2
   mockito: ^4.1.1
 
 flutter:
