--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ ios/Flutter/Generated.xcconfig
 ios/Runner/GeneratedPluginRegistrant.m
 ios/Runner/GeneratedPluginRegistrant.h
 android/app/google-services.json.old
+.flutter-plugins-dependencies
