--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,11 @@ dependencies:
   bloc: ^2.0.0
   equatable: ^1.0.1
   flutter_bloc: ^2.1.1
-  firebase_crashlytics: ^0.1.2
+  firebase_crashlytics: ^0.1.2+2
   flutter_custom_tabs: ^0.6.0
   hydrated_bloc: ^2.0.0
   intl: ^0.15.8
-  package_info: ^0.4.0+10
+  package_info: ^0.4.0+12
   firebase_messaging: ^6.0.2
   cached_network_image: ^1.1.3
   flutter_svg: ^0.14.3
