--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,10 @@ dependencies:
   firebase_crashlytics: ^0.1.2+2
   flutter_custom_tabs: ^0.6.0
   hydrated_bloc: ^2.0.0
-  intl: ^0.15.8
+  intl: ^0.16.0
   package_info: ^0.4.0+12
   firebase_messaging: ^6.0.2
-  cached_network_image: ^1.1.3
+  cached_network_image: ^2.0.0-rc.1
   flutter_svg: ^0.14.3
   floating_search_bar: ^0.2.0
   flutter_sticky_header: ^0.4.0
