Revert "added dev flavor for beta"
This reverts commit 5167e6965e473016a2d89efd6a74fda4a28d11e8.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         tools:replace="android:label"
         android:name="io.flutter.app.FlutterApplication"
         android:icon='@mipmap/ic_launcher'
-        android:label="@string/app_name"
+        android:label="Navis"
         android:allowBackup="false">
         <activity
             android:name=".MainActivity"
