--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ jobs:
         # need to be explicitly set
         - flutter build apk --split-per-abi
         - flutter build appbundle
-        - cd ../android && bundle exec fastlane beta
+        - cd android && bundle exec fastlane beta
       deploy:
         provider: releases
         skip_cleanup: true
