enable R8 full mode

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,9 +68,9 @@ android {
             signingConfig signingConfigs.release
 
             minifyEnabled true
-            useProguard false
+            shrinkResources true
 
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
