--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,4 +3,4 @@ org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
 # extra-gen-snapshot-options=--obfuscate
-android.enableR8=true
+android.enableR8.fullMode=true
