--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ android:
     - android-28
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_2db283701f8c_key -iv $encrypted_2db283701f8c_iv
-    -in secrets.tar.enc -out secrets.tar -d
+  - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then openssl aes-256-cbc -K $encrypted_2db283701f8c_key -iv $encrypted_2db283701f8c_iv
+    -in secrets.tar.enc -out secrets.tar -d; fi
   - bundle install --gemfile=android/Gemfile
 
 before_script:
