--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ android:
     - android-28
 
 before_install:
-  - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then openssl aes-256-cbc -K $encrypted_2db283701f8c_key -iv $encrypted_2db283701f8c_iv
+  - openssl aes-256-cbc -K $encrypted_2db283701f8c_key -iv $encrypted_2db283701f8c_iv
     -in secrets.tar.enc -out secrets.tar -d; fi
   - bundle install --gemfile=android/Gemfile
 
@@ -26,7 +26,7 @@ jobs:
       script:
         - flutter pub get
         - flutter test
-        - flutter build apk --debug --target-platform android-arm
+        - flutter build apk --target-platform android-arm
 
     - name: Deploy
       if: tag IS present
