--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ android:
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_2db283701f8c_key -iv $encrypted_2db283701f8c_iv
-    -in secrets.tar.enc -out secrets.tar -d; fi
+    -in secrets.tar.enc -out secrets.tar -d
   - bundle install --gemfile=android/Gemfile
 
 before_script:
