--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,12 @@ version: 1.5.5+66
 dependencies:
   flutter:
     sdk: flutter
+  wfcd_client:
+    git: https://github.com/SlayerOrnstein/wfcd_client.git  
+  worldstate_api_model:
+    git: https://github.com/SlayerOrnstein/worldstate_model.git
+  warframe_items_model:
+    git: https://github.com/SlayerOrnstein/warframe_item_models.git  
   equatable: ^1.0.1
   flutter_bloc: ^3.0.0
   firebase_crashlytics: ^0.1.2+2
@@ -17,12 +23,12 @@ dependencies:
   flutter_svg: ^0.14.3
   floating_search_bar: ^0.2.0
   flutter_sticky_header: ^0.4.0
-  worldstate_api_model:
-    git: https://github.com/SlayerOrnstein/worldstate_model.git
-  warframe_items_model:
-    git: https://github.com/SlayerOrnstein/warframe_item_models.git
   hive: ^1.2.0
-  
+  get_it: ^3.1.0
+  dartz: ^0.8.9
+  data_connection_checker: ^0.3.4
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
