--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,29 +5,28 @@ version: 1.5.5+66
 dependencies:
   flutter:
     sdk: flutter
-  wfcd_client:
-    git: https://github.com/SlayerOrnstein/wfcd_client.git  
+  flutter_localizations:
+    sdk: flutter
   worldstate_api_model:
     git: https://github.com/SlayerOrnstein/worldstate_model.git
   warframe_items_model:
     git: https://github.com/SlayerOrnstein/warframe_item_models.git  
   equatable: ^1.0.3
-  flutter_bloc: ^3.0.0
+  flutter_bloc: ^3.2.0
   firebase_crashlytics: ^0.1.2+2
   flutter_custom_tabs: ^0.6.0
   hydrated_bloc: ^3.0.0
   intl: ^0.16.0
   package_info: ^0.4.0+12
-  firebase_messaging: ^6.0.2
+  firebase_messaging: ^6.0.9
   cached_network_image: ^2.0.0-rc.1
-  flutter_svg: ^0.14.3
-  floating_search_bar: ^0.2.0
+  flutter_svg: ^0.17.1
+  floating_search_bar: ^0.3.0
   flutter_sticky_header: ^0.4.0
-  hive: ^1.2.0
+  hive: ^1.3.0
   get_it: ^3.1.0
   dartz: ^0.8.9
   data_connection_checker: ^0.3.4
-
 
 dev_dependencies:
   flutter_test:
@@ -38,6 +37,7 @@ dev_dependencies:
   bloc_test: ^3.0.0
   mockito: ^4.1.1
   extra_pedantic: ^1.1.1
+  intl_translation: ^0.17.7
 
 flutter:
   uses-material-design: true
