progress on new event look

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,13 @@ dependencies:
     git: https://github.com/SlayerOrnstein/warframe_item_models.git  
   equatable: ^1.0.3
   flutter_bloc: ^3.2.0
-  firebase_crashlytics: ^0.1.2+2
+  firebase_crashlytics: ^0.1.2+5
   flutter_custom_tabs: ^0.6.0
   hydrated_bloc: ^3.0.0
   intl: ^0.16.0
-  package_info: ^0.4.0+12
+  package_info: ^0.4.0+13
   firebase_messaging: ^6.0.9
-  cached_network_image: ^2.0.0-rc.1
+  cached_network_image: ^2.0.0
   flutter_svg: ^0.17.1
   floating_search_bar: ^0.3.0
   flutter_sticky_header: ^0.4.0
@@ -27,14 +27,14 @@ dependencies:
   get_it: ^3.1.0
   dartz: ^0.8.9
   data_connection_checker: ^0.3.4
-
+  youtube_player_flutter: ^6.0.3+2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_driver:
     sdk: flutter
   test: ^1.6.3
-  bloc_test: ^3.0.0
   mockito: ^4.1.1
   extra_pedantic: ^1.1.1
   intl_translation: ^0.17.7
