--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,10 +60,12 @@ flutter:
   assets:
     - assets/icons/
     - assets/wfcd_banner.svg
-    - assets/enemies/Corrupted/
-    - assets/enemies/Grineer/
-    - assets/enemies/Corpus/
-    - assets/enemies/Infestation/
+    - assets/enemies/corrupted/
+    - assets/enemies/grineer/
+    - assets/enemies/corpus/
+    - assets/enemies/infestation/
+    - assets/enemies/stalker/
     - assets/skyboxes/
+    - assets/event_info.json
     # - assets/maps/
     # - assets/maps/imgs/
