ignore generated locale code

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,4 @@ ios/Runner/GeneratedPluginRegistrant.m
 ios/Runner/GeneratedPluginRegistrant.h
 .env
 .flutter-plugins-dependencies
-.flutter-plugins-dependencies~origin_master
+/lib/l10n/messages_*.dart
