--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /l10n/intl_messages.arb
-    translation: /l10n/intl_messages_%two_letters_code%.arb
+    translation: /l10n/intl_%two_letters_code%.arb
