--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ jobs:
       script:
         - flutter pub get
         - flutter pub run intl_translation:generate_from_arb --output-dir=lib/l10n --no-use-deferred-loading
-          lib/l10n/localizations.dart l10n/intl_messages_*.arb
+          lib/l10n/localizations.dart l10n/intl_*.arb
         - flutter test
         - flutter build apk --target-platform android-arm
     - name: Deploy
