--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,3 +3,7 @@ include: package:extra_pedantic/analysis_options_flutter.yaml
 analyzer:
   exclude:
     - lib/l10n/messages_*.dart
+
+linter:
+  rules:
+    - prefer_single_quotes
