--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   hive: ^1.3.0
   get_it: ^3.1.0
   data_connection_checker: ^0.3.4
-  youtube_player_flutter: ^6.0.3+2
+  youtube_explode_dart: ^0.0.10
+  chewie: ^0.9.8+1
   lumberdash: ^2.1.1
   colorize_lumberdash: ^2.1.0
   supercharged: ^1.2.0
