--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: navis
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
-version: 1.5.11+72
+version: 2.0.0+73
 
 dependencies:
   flutter:
@@ -11,27 +11,26 @@ dependencies:
     git: https://github.com/SlayerOrnstein/worldstate_model.git
   warframe_items_model:
     git: https://github.com/SlayerOrnstein/warframe_item_models.git
-  equatable: ^1.0.3
+  equatable: ^1.1.0
   flutter_bloc: ^3.2.0
-  firebase_crashlytics: ^0.1.2+5
+  firebase_crashlytics: ^0.1.3
   flutter_custom_tabs: ^0.6.0
   hydrated_bloc: ^3.0.0
   intl: ^0.16.0
-  package_info: ^0.4.0+13
+  package_info: ^0.4.0+14
   firebase_messaging: ^6.0.9
   cached_network_image: ^2.0.0
-  flutter_svg: ^0.17.1
+  flutter_svg: ^0.17.2
   floating_search_bar: ^0.3.0
-  flutter_sticky_header: ^0.4.0
-  hive: ^1.3.0
-  get_it: ^3.1.0
+  flutter_sticky_header: ^0.4.2
+  hive: ^1.4.0+1
+  get_it: ^4.0.0
   data_connection_checker: ^0.3.4
   youtube_explode_dart: ^0.0.10
   chewie: ^0.9.8+1
   lumberdash: ^2.1.1
   colorize_lumberdash: ^2.1.0
   supercharged: ^1.2.0
-  wakelock: ^0.1.3+4
 
 dev_dependencies:
   flutter_test:
