--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ before_script:
     stable; fi;
   - export PATH=./flutter/bin:$PATH
   - flutter pub get
-  - flutter pub run intl_translation:generate_from_arb --output-dir=lib/l10n --no-use-deferred-loading
-    lib/l10n/localizations.dart l10n/intl_*.arb
+  - flutter pub run intl_translation:generate_from_arb --output-dir=lib/generated/intl --no-use-deferred-loading
+    lib/generated/l10n.dart lib/l10n/intl_*.arb
 
 jobs:
   include:
