--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /l10n/intl_messages.arb
-    translation: /l10n/intl_%two_letters_code%.arb
+  - source: lib/l10n/intl_en.arb
+    translation: /lib/l10n/intl_%two_letters_code%.arb
