--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,11 @@ flutter:
     # - assets/enemies/corpus/
     # - assets/enemies/infestation/
     - assets/enemies/stalker/
-    - assets/skyboxes/
+    # - assets/skyboxes/
     - assets/event_info.json
     # - assets/maps/
     # - assets/maps/imgs/
+
+flutter_intl:
+  enabled: true
+  class_name: NavisLocalizations
