--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: android
-jdk: oraclejdk8
+jdk: openjdk8
 os: linux
-dist: bionic
+dist: xenial
 android:
   components:
   - build-tools-28.0.3
