--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,7 +30,8 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
+    buildToolsVersion "29.0.2"
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -43,7 +44,7 @@ android {
     defaultConfig {
         applicationId 'com.cephalon.navis'
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName + getDate()
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
