--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ android:
     - android-sdk-license-.+
     - google-gdk-license-.+
 before_install:
+  - yes | sdkmanager "build-tools;29.0.2"
   - openssl aes-256-cbc -K $encrypted_2db283701f8c_key -iv $encrypted_2db283701f8c_iv
     -in secrets.tar.enc -out secrets.tar -d
   - bundle install --gemfile=android/Gemfile
