--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ dist: xenial
 android:
   components:
     - build-tools-28.0.3
+    - android-28
     - android-29
   licenses:
     - android-sdk-preview-license-.+
