--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   intl: ^0.16.0
   package_info: ^0.4.0+16
   firebase_messaging: ^6.0.13
-  cached_network_image: ^2.0.0-rc.1
+  cached_network_image: ^2.0.0
   flutter_svg: ^0.14.3
   floating_search_bar: ^0.2.0
   flutter_sticky_header: ^0.4.0
@@ -62,6 +62,7 @@ flutter:
     - assets/enemys/Grineer/
     - assets/enemys/Corpus/
     - assets/enemys/Infestation/
-    - assets/skyboxes/
+    - assets/Derelict.webp
+    # - assets/skyboxes/
     #- assets/maps/
     #- assets/maps/imgs/
