--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
     stable; fi;
   - export PATH=./flutter/bin:$PATH
   - flutter pub get
-  - flutter pub run intl_translation:generate_from_arb --output-dir=lib/generated/intl
+  - mkdir lib/generated/intl && flutter pub run intl_translation:generate_from_arb --output-dir=lib/generated/intl
     --no-use-deferred-loading lib/generated/l10n.dart lib/l10n/intl_*.arb
 jobs:
   include:
