--- a/packages/wfcd_client/pubspec.yaml
+++ b/packages/wfcd_client/pubspec.yaml
@@ -4,7 +4,7 @@ version: 2.2.0
 author: Ludwig <blacklightinglr@gmail.com>
 
 environment:
-  sdk: ">=2.4.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   worldstate_api_model:
@@ -13,7 +13,9 @@ dependencies:
     path: ../warframe_items_model
   equatable: ^1.0.1
   dartx: ^0.3.0
+  hive: ^1.4.1+1
 
 dev_dependencies:
   test: ^1.6.0
   extra_pedantic: ^1.1.1+3
+  mockito: ^4.1.1
