--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: navis
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
-version: 2.0.0+73
+version: 2.0.0+80
 
 dependencies:
   flutter:
@@ -14,10 +14,11 @@ dependencies:
   wfcd_client:
     path: packages/wfcd_client
   equatable: ^1.1.1
-  flutter_bloc: ^3.2.0
+  bloc: ^3.0.0
+  flutter_bloc: ^3.0.0
   firebase_crashlytics: ^0.1.3
   flutter_custom_tabs: ^0.6.0
-  hydrated_bloc: ^3.0.0
+  hydrated_bloc: ^3.1.0
   intl: ^0.16.0
   package_info: ^0.4.0+14
   firebase_messaging: ^6.0.9
@@ -33,6 +34,7 @@ dependencies:
   lumberdash: ^2.1.1
   colorize_lumberdash: ^2.1.0
   supercharged: ^1.2.0
+  dartz: ^0.8.9
 
 dev_dependencies:
   flutter_test:
