--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,35 +16,35 @@ dependencies:
   equatable: ^1.1.1
   bloc: ^3.0.0
   flutter_bloc: ^3.0.0
-  firebase_crashlytics: ^0.1.3
+  firebase_crashlytics: ^0.1.3+3
   flutter_custom_tabs: ^0.6.0
   hydrated_bloc: ^3.1.0
   intl: ^0.16.0
   package_info: ^0.4.0+14
   firebase_messaging: ^6.0.9
-  cached_network_image: ^2.0.0
-  flutter_svg: ^0.17.3+1
+  cached_network_image: ^2.1.0+1
+  flutter_svg: ^0.17.4
   floating_search_bar: ^0.3.0
   flutter_sticky_header: ^0.4.2
   hive: ^1.4.1+1
-  get_it: ^4.0.0
+  get_it: ^4.0.2
   data_connection_checker: ^0.3.4
-  youtube_explode_dart: ^0.0.10
-  chewie: ^0.9.8+1
+  youtube_explode_dart: ^0.0.16
+  chewie: ^0.9.10
   lumberdash: ^2.1.1
   colorize_lumberdash: ^2.1.0
-  supercharged: ^1.2.0
-  dartz: ^0.8.9
+  supercharged: ^1.5.1
+  dartz: ^0.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_driver:
     sdk: flutter
-  test: ^1.6.3
+  test: ^1.9.4
   mockito: ^4.1.1
   extra_pedantic: ^1.2.0
-  intl_translation: ^0.17.7
+  intl_translation: ^0.17.9
 
 flutter:
   uses-material-design: true
