--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 before_script:
   - tar xvf secrets.tar
   - if [  ! -d "flutter" ] ; then git clone https://github.com/flutter/flutter.git -b
-    stable; fi;
+    beta; fi;
   - export PATH=./flutter/bin:$PATH
   - flutter pub get
   - mkdir lib/generated/intl && flutter pub run intl_translation:generate_from_arb --output-dir=lib/generated/intl
