--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   intl: ^0.16.1
   package_info: ^0.4.0+14
   firebase_messaging: ^6.0.9
-  cached_network_image: ^2.1.0+1
+  cached_network_image: ^2.2.0
   flutter_svg: ^0.17.4
   floating_search_bar: ^0.3.0
   flutter_sticky_header: ^0.4.2
