--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ android/app/.classpath
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 .flutter-plugins-dependencies
 ios/Flutter/flutter_export_environment.sh
+ios/Runner/GoogleService-Info.plist
