--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,14 @@ dependencies:
   flutter_bloc: ^3.2.0
   firebase_crashlytics: ^0.1.3+3
   flutter_custom_tabs: ^0.6.0
-  hydrated_bloc: ^3.0.0
+  hydrated_bloc: ^3.1.0
   intl: ^0.16.0
   intl_translation: ^0.17.7
-  package_info: ^0.4.0+16
+  package_info: ^0.4.0+17
   firebase_messaging: ^6.0.13
-  cached_network_image: ^2.0.0
+  cached_network_image: ^2.2.0+1
   flutter_svg: ^0.17.4
-  floating_search_bar: ^0.2.0
+  floating_search_bar: ^0.3.0
   flutter_sticky_header: ^0.4.0
   wfcd_client:
     git: https://github.com/SlayerOrnstein/wfcd_client.git
@@ -29,7 +29,7 @@ dependencies:
     git: https://github.com/SlayerOrnstein/worldstate_model.git
   hive: ^1.1.1
   hive_flutter: ^0.2.1
-  implicitly_animated_reorderable_list: ^0.1.10
+  implicitly_animated_reorderable_list: ^0.2.1
 
 dev_dependencies:
   flutter_test:
