--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  cupertino_icons: ^0.1.3  
   bloc: ^3.0.0
   equatable: ^1.1.1
   flutter_bloc: ^3.2.0
